--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
 <body>
     <div>
         <h1>Es lebt! 🚀</h1>
-        <p>Deployed via GitHub Actions & AWS CDK.</p>
+        <p>Deployed via GitHub Actions & AWS CDK. Matthias is so cool</p>
     </div>
 </body>
 </html>
